--- a/src/scss/_mediaQueries.scss
+++ b/src/scss/_mediaQueries.scss
@@ -1,3 +1,13 @@
+/* ----- TABLE OF CONTENT -----
+
+  1. imports
+  2. 480px
+  3. 768px
+  4. 1024px
+  5. 1200px
+
+*/
+
 @import "variables";
 @import "mixins";
 
@@ -49,6 +59,7 @@
 @media screen and (min-width: 1200px) {
   body {
     padding-left: 3rem;
+    overflow: hidden;
   }
   #mobile-menu {
     display: none;
